--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <p class="right-card-text">LOREM IPSUM</p>
                 <h1 class="right-card-title">LOREM IPSUM SET ADEMIR</h1>
                 <a class="right-card-link" href=""> click
-                    <img src="./images/icons8-arrow-30.png" alt="" class="arrow-image"></span>
+                    <img src="./images/icons8-arrow-30.png" alt="" class="arrow-image">
                 </a>
             </div>
         </div>
