--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <li><a href="#">Testimonials</a></li>
                     <li><a href="#">Contact Us</a></li>
                     <li>
-                        <img src="./images/menu-bar.png" alt="menu" class="menu-desk-icon">
+                        <img src="https://res.cloudinary.com/dysbwjj9u/image/upload/v1708865707/menu-bar_fyrodj.png" alt="menu" class="menu-desk-icon">
                     </li>
                 </ul>
             </div>
@@ -35,16 +35,16 @@
                 congue sem nec justo mollis, in tincidunt erat pretium. Sed pulvinar, massa ac porta viverra.</p>
             <button class="btn-primary">Click Me</button>
         </div>
-        <img src="./images/banner.jpg" alt="banner" class="banner-image">
+        <img src="https://res.cloudinary.com/dysbwjj9u/image/upload/v1708866092/pexels-robin-stickel-70497_fu3nvv.jpg" alt="banner" class="banner-image">
     </section>
     <section class="images-section">
         <div class="image-container">
             <div class="images-left">
-                <img src="./images/street.jpg" alt="" class="vertical-images">
-                <img src="./images/food.jpg" alt="" class="vertical-images">
+                <img src="https://res.cloudinary.com/dysbwjj9u/image/upload/v1708866165/pexels-rachel-claire-6752433_ndn7a6.jpg" alt="" class="vertical-images">
+                <img src="https://res.cloudinary.com/dysbwjj9u/image/upload/v1708866157/pexels-eva-bronzini-6141651_r51mco.jpg" alt="" class="vertical-images">
             </div>
             <div>
-                <img src="./images/bbq.jpg" alt="" class="right-image">
+                <img src="https://res.cloudinary.com/dysbwjj9u/image/upload/v1708866137/pexels-mister-mister-3434523_g9f74j.jpg" alt="" class="right-image">
             </div>
         </div>
         <div class="right-section">
@@ -52,7 +52,7 @@
                 <p class="right-card-text">LOREM IPSUM</p>
                 <h1 class="right-card-title">LOREM IPSUM SET ADEMIR</h1>
                 <a class="right-card-link" href=""> click
-                    <img src="./images/icons8-arrow-30.png" alt="" class="arrow-image">
+                    <img src="https://res.cloudinary.com/dysbwjj9u/image/upload/v1708866085/icons8-arrow-30_xcsjjs.png" alt="" class="arrow-image">
                 </a>
             </div>
         </div>
